<resources>
    <string name="app_name">ChatTutorial</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <integer name="card_flip_time_full">300</integer>
    <integer name="card_flip_time_half">150</integer>

    <string name="error_id">id를 입력해주세요.</string>
    <string name="error_pwd">패스워드를 입력해주세요.</string>
    <string name="error_blank">값을 입력해주세요.</string>
    <string name="login">LOGIN</string>
    <string name="id">아이디(이메일)</string>
    <string name="password">비밀번호</string>
    <string name="signin">S I G N I N</string>
    <string name="notUser">회원이 아니신가요?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="name">이름</string>
    <string name="kRegister">회원 가입</string>
    <string name="error_name">이름을 입력해주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="rooms">Rooms</string>
    <string name="readimage">readImage</string>
    <string name="person">person</string>
    <string name="checkreadimage">checkReadImage</string>
    <string name="sendbutton">sendButton</string>
    <string name="write_a_message">Write a message</string>
    <string name="chat_room">채팅 방</string>
    <string name="exist_room">채팅방이 존재하지 않습니다.</string>
    <string name="friend">친구</string>
    <string name="me">나</string>
</resources>